# fridge

./: .env  .pre-commit-config.yaml  README.md  docker-compose.dev-db.yml  docker-compose.yml  tree.txt
.github/workflows/: test-backend.yml  test-frontend.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 003006983ee8_remove_multiple_foreign_keys.py  21391c0f7009_modify_list.py  444717135670_init.py  83697dcbef8a_init.py  8b38707badd7_remove_family_id_from_task.py  993c133cb8f3_init.py  bbc7f8146d54_init.py  c9918df615cc_add_list.py  d70e2cda0485_add_family.py  e5a4f4405eb7_add_task.py  f6b0a7250071_init_models.py
backend/app/: config.py  main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: families.py  lists.py  login.py  ping.py  tasks.py  users.py
backend/app/core/: crud.py  db.py  models.py  security.py  utils.py
backend/scripts/: format.sh  lint.sh  prestart.sh  setup-db.sh
backend/tests/: conftest.py  utils.py
backend/tests/api/routes/: test_families.py  test_login.py  test_tasks.py  test_users.py
backend/tests/crud/: test_familiy.py  test_list.py  test_task.py  test_user.py
frontend/: .gitignore  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/Common/: NotFound.tsx  Spinner.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/routes/: __root.tsx  _layout.tsx  login.tsx  setup.tsx  signup.tsx
frontend/tests/: auth.setup.ts  config.ts  home.spec.ts  login.spec.ts  setup.spec.ts  sign-up.spec.ts  task.spec.ts
frontend/tests/utils/: random.ts  user.ts
scripts/: generate-client.sh  start-dev-db.sh  test.sh
(+10 files in other folders)
