[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["David"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
sqlmodel = "^0.0.22"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
