[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["David"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.4" }
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
sqlmodel = "^0.0.22"
psycopg = { extras = ["binary"], version = "^3.2.3" }
pyjwt = "^2.9.0"
passlib = { version = ">=1.7.4,<2.0.0", extras = ["bcrypt"] }
tenacity = "^9.0.0"
# Pin bcrypt until passlib supports the latest
bcrypt = "4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.5"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
